# PackageKit

./: Cargo.toml  build.rs  meson_options.txt  wrapper.h
backends/eopkg/: eopkgBackend.py  pk-backend-eopkg.c
client/: pk-console.c
docs/html/: pk-matrix.html
lib/python/packagekit/: backend.py
policy/: org.freedesktop.packagekit.rules
src/: lib.rs  packagekit.rs  pk-backend-spawn.c
